--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,6 +2,7 @@
   <ul>
     <li><a href="/" {% if page.url=="/" %}class="active" {% endif %}>Home</a></li>
     <li><a href="/events/" {% if page.url contains "/events/" %}class="active" {% endif %}>Events</a></li>
+    <li><a href="/calendar/" {% if page.url contains "/calendar/" %}class="active" {% endif %}>Kalender</a></li>
     <li><a href="/impressum/" {% if page.url=="/impressum/" %}class="active" {% endif %}>Kontakt & Impressum</a></li>
   </ul>
 </nav>
